--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         <button id="audioToggle"><i class="fas fa-volume-up"></i></button>
     </div>
     
+    <!-- 사운드 알림 메시지 -->
+    <div id="sound-notification" class="sound-notification">
+        <div class="notification-content">
+            <i class="fas fa-music"></i>
+            <p>음악을 켜려면 우측 하단 사운드 버튼을 클릭하세요</p>
+            <button id="close-notification"><i class="fas fa-times"></i></button>
+        </div>
+    </div>
+    
     <header>
         <nav>
             <div class="logo">A.K.</div>
